--- a/logistica.html
+++ b/logistica.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" href="img/logo1.png">
+    <link rel="icon" href="img/logo2.png">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/style.css">
@@ -21,7 +21,7 @@
 <body>
     <main>
         <header id="header">
-            <a id="logo" href="#"><img src="img/logo1.png" alt="logo Etec Has"></a>
+            <a id="logo" href="#"><img src="img/logo2.png" alt="logo Etec Has"></a>
             <span class="spanh">Etec Prof. Horácio <br> Augusto Da Silveira</span>
             <nav id="nav">
                 <button id="btn-mobile">
@@ -30,8 +30,8 @@
                 <ul id="menu">
                     <li><a href="#inicio">Inicio</a></li>
                     <li><a href="https://davizukss.github.io/Quiz-Feira-Industrial">Quiz</a></li>
-                    <li><a href="#inicioC">Administração</a></li>
-                    <li><a href="logistica.html#inicioC">Logistica</a></li>
+                    <li><a href="#inicioC">Logistica</a></li>
+                    <li><a href="index.html#inicioC">Administração</a></li>
                     <li><a href="https://etechoracio.com.br/has/contato/">Contato</a></li>
                 </ul>
             </nav>
@@ -42,7 +42,7 @@
             </div>
             <div>
                 <h1>Site<br>
-                    <p>Administração</p>Feira-Industrial
+                    <p>Logística</p>Feira-Industrial
                 </h1>
             </div>
             <a href="https://etechoracio.com.br/has">Site Etec HAS</a>
@@ -139,19 +139,7 @@
                     <img src="img/carregadora.png" alt="caixa">
                 </figure>
                 <p>
-                    O Técnico em Administração é o profissional que participa da gestão dos recursos mercadológicos, humanos, financeiros, materiais e produtivos. Executa as rotinas administrativas, controla materiais, acompanha níveis de eficiência e produtividade e presta atendimento a clientes. Trabalha em equipe, otimiza recursos, propõe inovações e adota postura ética na condução das relações e atividades.
-                    Além das grandes oportunidades de trabalho a administração pode trazer, ela também pode auxiliar no
-                    dia a dia. O tempo do curso é de 3 anos e as materias de especialização são:
-                </p>
-                <br>
-                <ul>
-                    <li>Aplicativos Informatizados</li>
-                    <li>Custos, Processos e Operações Contábeis</li>
-                    <li>Planejamento e Organização de Rotinas de Departamento Pessoal</li>
-                    <li>Administração da Produção e Serviços</li>
-                    <li>Administração de Recursos Humanos</li>
-                    <li> Administração Financeira e Orçamentária</li>
-                </ul>
+                    O técnico em Logística é o profissional que colabora na gestão dos processos de planejamento, operação e controle de programação nas áreas de produção de bens e serviços, de compras, de armazenagem, de estoques, de movimentação e de expedição. Viabiliza o transporte e a distribuição de materiais e produtos, coordena a manutenção de máquinas e de equipamentos e executa as funções, utilizando tecnologia de informação. Identifica metodologias, sistemas, procedimentos, equipamentos e estabelece critérios para seleção e utilização adequada. Elabora tabelas, interpreta gráficos e mapeia o custeio das áreas produtivas envolvidas. Implementa os procedimentos de controle de custos, qualidade, segurança e higiene do trabalho no sistema logístico. Atua em equipe, segundo princípios éticos e cidadãos.</p>
             </div>
         </section>
     </main>
@@ -176,7 +164,7 @@
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="">Cursos</a></li>
                 <li><a href="https://davizukss.github.io/Quiz-Feira-Industrial">Quiz</a></li>
-                <li><a href="#inicioC">O Que é Administração?</a></li>
+                <li><a href="#inicioC">Administração</a></li>
                 <li><a href="https://etechoracio.com.br/has/contato/">Contato</a></li>
             </ul>
             </p>
